some progress and more discovered some troubles

--- a/aardvark.ipynb
+++ b/aardvark.ipynb
@@ -8,12 +8,44 @@
     {
      "data": {
       "text/html": [
-       "Installing package FShade.Imperative, version 4.3.9.done!"
+       "Installing package Aardvark.Base.TypeProviders, version 4.5.15.failed!"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
+    {
+     "ename": "Unhandled Exception",
+     "evalue": "input.fsx (2,6)-(2,14) typecheck error The namespace or module 'Aardvark' is not defined.",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (2,6)-(2,14) typecheck error The namespace or module 'Aardvark' is not defined."
+     ]
+    }
+   ],
+   "source": [
+    "#r \"nuget:Aardvark.Base.TypeProviders, 4.5.15\"\n",
+    "open Aardvark.Base // needed to prevent from failing\n",
+    "// this one takes forever\n",
+    "// sometimes it fails like this: input.fsx (2,6)-(2,14) typecheck error The namespace or module 'Aardvark' is not defined.\n",
+    "// seems to be a race condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#r \"nuget:FShade.Imperative, 4.3.9\"\n",
+    "open FShade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -79,13 +111,18 @@
     }
    ],
    "source": [
-    "#r \"nuget:FShade.Imperative, 4.3.9\"\n",
-    "open FShade"
+    "#r \"nuget:FShade.Core, 4.3.9\" // needed as workaround\n",
+    "open FShade // needed\n",
+    "(* this one puts out lines like this:\n",
+    "=============== S T A R T ==========================================\n",
+    ">>>> /root/.nuget/packages/aardvark.base.typeproviders/4.5.8/lib/netstandard2.0/Aardvark.Base.TypeProviders.dll\n",
+    ">>>> /root/.nuget/packages/aardvark.base.typeproviders/4.5.8/lib/netstandard2.0/Aardvark.Base.TypeProviders.dll\n",
+    "*)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,52 +133,22 @@
     "#r \"nuget:FShade.Core, 4.3.9\"\n",
     "#r \"nuget:FShade, 4.3.9\"\n",
     "#r \"nuget:FShade.GLSL, 4.3.9\"\n",
-    "#r \"nuget:Aardvark.Base.Rendering, 4.5.11\""
+    "#r \"nuget:Aardvark.Base.Rendering, 4.5.11\"\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"#version 410\n",
-      "\n",
-      "\n",
-      "\n",
-      "layout(std140, binding = 0)\n",
-      "uniform Global\n",
-      "{\n",
-      "    mat4x4 ModelViewProjMatrix;\n",
-      "};\n",
-      "\n",
-      "\n",
-      "\n",
-      "#ifdef Vertex\n",
-      "\n",
-      "layout(location = 0) in vec4 pos;\n",
-      "layout(location = 0) out vec4 posOut;\n",
-      "void main()\n",
-      "{\n",
-      "    posOut = (pos * ModelViewProjMatrix);\n",
-      "}\n",
-      "\n",
-      "#endif\n",
-      "\"\n"
+     "ename": "Unhandled Exception",
+     "evalue": "input.fsx (20,8)-(24,10) typecheck error The type referenced through 'FShade.Imperative.Module' is defined in an assembly that is not referenced. You must add a reference to assembly 'FShade.Imperative'.",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (20,8)-(24,10) typecheck error The type referenced through 'FShade.Imperative.Module' is defined in an assembly that is not referenced. You must add a reference to assembly 'FShade.Imperative'."
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<null>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -173,8 +180,74 @@
     "    // Module -> CModule\n",
     "    |> ModuleCompiler.compileGLSL glsl410 \n",
     "\n",
-    "printfn \"%A\" s.code"
+    "printfn \"%A\" s.code\n",
+    "\n",
+    "// sometimes fails: input.fsx (20,8)-(24,10) typecheck error The type referenced through 'FShade.Imperative.Module' is defined in an assembly that is not referenced. You must add a reference to assembly 'FShade.Imperative'."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#r \"nuget:Aardvark.Application,4.5.11\"\n",
+    "#r \"nuget:Aardvark.Application.Slim.GL, 4.5.11\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Unhandled Exception",
+     "evalue": "input.fsx (3,20)-(3,31) typecheck error The namespace 'Incremental' is not defined.\ninput.fsx (5,15)-(5,25) typecheck error The namespace 'SceneGraph' is not defined.\ninput.fsx (6,15)-(6,26) typecheck error The namespace 'Application' is not defined.\ninput.fsx (7,15)-(7,26) typecheck error The namespace 'Application' is not defined.",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (3,20)-(3,31) typecheck error The namespace 'Incremental' is not defined.\ninput.fsx (5,15)-(5,25) typecheck error The namespace 'SceneGraph' is not defined.\ninput.fsx (6,15)-(6,26) typecheck error The namespace 'Application' is not defined.\ninput.fsx (7,15)-(7,26) typecheck error The namespace 'Application' is not defined."
+     ]
+    }
+   ],
+   "source": [
+    "open System\n",
+    "open Aardvark.Base\n",
+    "open Aardvark.Base.Incremental\n",
+    "open Aardvark.Base.Rendering\n",
+    "open Aardvark.SceneGraph\n",
+    "open Aardvark.Application\n",
+    "open Aardvark.Application.Slim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let a = OpenGlApplication()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
